sandbox/output
TicketDispenserTest.java:16: error: cannot find symbol
        assertEquals(1, newTicketTurnNumber - previousTicketTurnNumber);
                                              ^
  symbol:   variable previousTicketTurnNumber
  location: class TicketDispenserTest
1 error
